syntax = "proto3";

package sample;

service SampleService {
  rpc UnaryCall(RequestMessage) returns (ResponseMessage);
  rpc ServerToClientStreamingCall(RequestMessage) returns (stream ResponseMessage);
}

message RequestMessage {
  string message = 1;
}

message ResponseMessage {
  string message = 1;
}
